--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,26 +5,20 @@
 }
 
 :root {
-    --hue: 0;
-    --saturation: 0%;
-    --lightness: 100%;
-
-
     --white: #ffffff;
     --light: #c9c9c9;
     --dark: #5e5e5e;
     --black: #000000;
-    --blue: #07306e;
     --lastn: #070bfa;
 }
 
 body {
-    background-color: hsl(var(--hue), var(--saturation), var(--lightness));
+    background-color: var(--white);
 }
 
 a {
     
-    color: var(--lightness);
+    color: var(--white);
     text-decoration: none;
 }
 
@@ -95,17 +89,6 @@ h2 {
     width: 40%;
 }
 
-.bio-info {
-    width: 60%;
-}
-
-.bio-pic,
-.bio-info {
-    float: left;
-    margin-top: 7%;
-
-}
-
 .bio-img {
     width: 90%;
     border-radius: 5px;
@@ -115,23 +98,27 @@ h2 {
     transform: translateX(20%) translateY(-12%) scale(1.4);
 }
 
+.bio-info {
+    width: 60%;
+}
+
+.bio-pic,
+.bio-info {
+    float: left;
+    margin-top: 7%;
+}
+
 .bio-info h2 {
     padding-bottom: 3%;
 }
 
 .card-p-one {
     width: 40% !important;
-    /* width: 30% ; */
-
 }
 
-/* .p-one-img {
-    position: relative;
-} */
 .card-p-one:hover {
     transform: translateX(8%) scale(1.35) !important;
 }
-
 
 .card-p-one,
 .card-p-two,
@@ -158,10 +145,45 @@ h2 {
     background-color: var(--dark);
     color: var(--white);
     transform: scale(1.35);
-
 }
 
+.container-two {
+    border-radius: 5px;
+    background-color: var(--dark);
+    padding: 20px;
+    color: var(--white);
+}
 
+.container-two p {
+    display: inline-block;
+    margin-left: 3%;
+}
+
+input[type=text], 
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid var(--white);
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+  
+input[type=submit] {
+    background-color: var(--white);
+    color: var(--black);
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+  
+input[type=submit]:hover {
+    background-color: var(--black);
+    color: var(--white);
+}
 
 .footer {
     padding: 10%;
@@ -170,33 +192,9 @@ h2 {
     background-color: var(--light);
 }
 
-
-
-input[type=text], 
-select, 
-textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-  }
-  
-  input[type=submit] {
-    background-color: var(--dark);
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  input[type=submit]:hover {
-    background-color: var(--black);
-  }
+.footer a {
+    color: var(--black);
+}
 
   @media all and (max-width: 710px) {
     p {
